解决直接启动不成功的问题，添加dubbo

--- a/conf/zoo.cfg
+++ b/conf/zoo.cfg
@@ -9,7 +9,9 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just 
 # example sakes.
-dataDir=/tmp/zookeeper
+#dataDir=/tmp/zookeeper
+#配置快照生成位置
+dataDir=D:/ideaprojectsHeima/zookeeper/data/zkData
 # the port at which the clients will connect
 clientPort=2181
 # the maximum number of client connections.
@@ -25,7 +27,7 @@ clientPort=2181
 #autopurge.snapRetainCount=3
 # Purge task interval in hours
 # Set to "0" to disable auto purge feature
-#autopurge.purgeInterval=1
+autopurge.purgeInterval=1
 
 ## Metrics Providers
 #
